# setup-python

./: README.md  package-lock.json  package.json
.github/workflows/: basic-validation.yml  check-dist.yml  codeql-analysis.yml  e2e-cache-freethread.yml  e2e-cache-freethreaded.yml  e2e-cache.yml  e2e-tests.yml  licensed.yml  test-graalpy.yml  test-pypy.yml  test-python-freethread.yml  test-python-freethreaded.yml  test-python.yml
__tests__/: utils.test.ts  verify-python.py
__tests__/data/: Pipfile  pipenv-requirements.txt  pyproject.toml  requirements-linux.txt  requirements.txt
docs/: advanced-usage.md
src/: find-graalpy.ts  find-pypy.ts  find-python.ts  install-python.ts  setup-python.ts  utils.ts
