[tool.poetry]
name = "testactiontasks"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
flake8 = "^6.0.0"
numpy = "^2.0.2"
pyinstaller = "^6.11.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel", "Cython"]
build-backend = "poetry.core.masonry.api"